# Edited_AirshipMPC

./: .gitignore  DELIVERABLES.md  README.md  ROS1_to_ROS2_Migration_Report.md  all_ros_files.txt  apply_ros2_fixes.sh  convert_launch_files.py  fix_all_packages.py  fix_all_submodule_cmake.py  fix_cmake_complete.py  fix_cmake_includes.py  fix_cmake_smart.py  fix_cpp_files.py  fix_package_xml_export.py  fix_project_names.py  fix_python_files.py  fix_ros2_headers.py  install_and_compile.sh  migration_file_list.csv  migration_summary.md  ros1_to_ros2_migration_files.md  todo.md  update_cmake_deps.py  update_cmakelists.py  update_cpp_files.py  update_package_xml.py  update_python_files.py
experiments/sim/: airship_sim.sh  drone_sim.sh
install/: local_setup.sh  setup.sh
install/blimp_nmpc_wrapper_node/lib/blimp_nmpc_wrapper_node/: blimp_nmpc_wrapper_node.py
install/blimp_nmpc_wrapper_node/local/lib/python3.11/dist-packages/blimp_nmpc_wrapper_node/: __init__.py  blimp_nmpc_wrapper_node.py  formation_config.py
install/blimp_nmpc_wrapper_node/local/lib/python3.11/dist-packages/blimp_nmpc_wrapper_node-0.0.0-py3.11.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
install/blimp_nmpc_wrapper_node/share/ament_index/resource_index/package_run_dependencies/: blimp_nmpc_wrapper_node
install/blimp_nmpc_wrapper_node/share/ament_index/resource_index/parent_prefix_path/: blimp_nmpc_wrapper_node
install/blimp_nmpc_wrapper_node/share/blimp_nmpc_wrapper_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/blimp_nmpc_wrapper_node/share/blimp_nmpc_wrapper_node/cmake/: blimp_nmpc_wrapper_nodeConfig-version.cmake  blimp_nmpc_wrapper_nodeConfig.cmake
install/blimp_nmpc_wrapper_node/share/blimp_nmpc_wrapper_node/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/blimp_nmpc_wrapper_node/share/blimp_nmpc_wrapper_node/nodes/: blimp_nmpc_wrapper_node.py
install/neural_network_detector/share/neural_network_detector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/: nmpc_blimp_formation_planner
src/blimp_nmpc_wrapper_node/: CMakeLists.txt  package.xml  setup.py
src/blimp_nmpc_wrapper_node/blimp_nmpc_wrapper_node/: blimp_nmpc_wrapper_node.py
src/blimp_nmpc_wrapper_node/launch/: one_blimp.launch.py
src/blimp_nmpc_wrapper_node/nodes/: blimp_nmpc_wrapper_node.py
submodules/pytorch_ssd_server/: README.md  binary_structs.py  server.py
