<?xml version="1.0"?>
<package format="3">
  <name>blimp_nmpc_wrapper_node</name>
  <version>0.0.0</version>
  <description>The blimp_nmpc_wrapper_node package</description>

  <maintainer email="eprice@todo.todo">eprice</maintainer>
  <license>GPL3</license>
  <author>eprice@todo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nmpc_blimp_formation_planner</depend>
  <depend>visualization_msgs</depend>
  <depend>uav_msgs</depend>

  <export/>
</package>

