<?xml version="1.0"?>
<package format="3">
  <name>blimp_nmpc_wrapper_node</name>
  <version>0.0.0</version>
  <description>The blimp_nmpc_wrapper_node package</description>
  <maintainer email="eprice@todo.todo">eprice</maintainer>
  <license>GPL-3.0</license>
  <author email="eprice@todo">eprice</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclpy</depend>
  <depend>nmpc_blimp_formation_planner</depend>
  <depend>visualization_msgs</depend>
  <depend>uav_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>